working with manually added PV and load profiles
